# hypersonic

./: .gitignore  Cargo.toml  README.md
fixtures/basic-nested/: index.html
fixtures/basic-nested/scripts/: a.js  b.js
hypersonic/: .editorconfig  Cargo.toml
hypersonic/src/: main.rs
hypersonic/src/core/: asset.rs  mod.rs
hypersonic/src/default_plugins/: mod.rs
hypersonic/src/default_plugins/transformer_html/: mod.rs  transformer.rs
hypersonic/src/default_plugins/transformer_js/: mod.rs  transformer.rs
hypersonic/src/default_plugins/transformer_noop/: mod.rs  transformer.rs
hypersonic/src/platform/: args.rs  log_level.rs  mod.rs
hypersonic/src/resolver/: mod.rs  resolver.rs
hypersonic/src/transformation/: actions.rs  mod.rs  transform.rs  transformer.rs  transformer_container.rs  transformer_context.rs  transformer_result.rs
hypersonic/src/utils/: container.rs  hash.rs  mod.rs  profiler.rs  queue.rs
parcel-node-resolver/: Cargo.toml
parcel-transformer-js/: Cargo.toml
parcel-transformer-js/src/: lib.rs
